--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="ionic.example">
 <head>
 	<meta charset="UTF-8">
 	<title>Map</title>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+	<link rel="stylesheet" href="style.css">
+	<link href="ionic.css" rel="stylesheet">
+	<script src="angular.min.js"></script>
+	<script src="ionic.bundle.js"></script>
+	<script src="googleapis.js"></script>
 </head>
-<body>
-	
-</body>
+
+
+<body ng-controller="MapCtrl">
+    <ion-header-bar class="bar-dark" >
+      <h1 class="title">Map</h1>
+    </ion-header-bar>
+    <ion-content>
+      <div id="map" data-tap-disabled="true"></div>
+    </ion-content>
+    <ion-footer-bar class="bar-dark">
+      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">Find Me</a>
+    </ion-footer-bar>
+  </body>
+
+  
 </html>
