--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -13,6 +13,9 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
+    
+    <!-- google maps javascript -->
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
 
     <!--bootstrap-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -31,11 +34,7 @@
     <script src="js/controllers.js"></script>
   </head>
 
-  <body ng-app="starter">
-
-    <ion-header-bar class="bar-dark" >
-      <h1 class="title">Map</h1>
-    </ion-header-bar>
+  <body ng-controller="MapCtrl" ng-app="starter">
 
     <div class="list list-inset">
       <label class="item item-input">
