--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -14,7 +14,7 @@
     -->
     
     <!-- google maps javascript -->
-    <script src="maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
 
     <!--moduleangular-->
     <script src="lib/ionic/js/moduleangular.js"></script>
@@ -30,7 +30,7 @@
     <script src="js/controllers.js"></script>
   </head>
 
-  <body ng-controller="MapCtrl" ng-app="starter">
+  <body ng-controller="MapCtrl">
 
     <div class="list list-inset">
       <label class="item item-input">
