--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="ionic.example">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -30,7 +30,7 @@
     <script src="js/controllers.js"></script>
   </head>
 
-  <body ng-controller="MapCtrl">
+  <body ng-controller="MapCtrl" ng-app="starter">
 
     <div class="list list-inset">
       <label class="item item-input">
