--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -1,50 +1,25 @@
-<!DOCTYPE html>
-<html>
+<html ng-app="ionic.example">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Map</title>
-
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/map.css">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     
+    <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
+    <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
+
     <!-- google maps javascript -->
     <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
 
-    <!--moduleangular-->
-    <script src="lib/ionic/js/moduleangular.js"></script>
-
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
   </head>
-
-  <body ng-controller="MapCtrl" ng-app="starter">
-
-    <div class="list list-inset">
-      <label class="item item-input">
-        <i class="icon ion-search placeholder-icon"></i>
-        <input type="text" placeholder="Buscar">
-      </label>
-    </div>
-
+  <body ng-controller="MapCtrl">
+    <ion-header-bar class="bar-dark" >
+      <h1 class="title">Map</h1>
+    </ion-header-bar>
     <ion-content>
       <div id="map" data-tap-disabled="true"></div>
     </ion-content>
     <ion-footer-bar class="bar-dark">
-      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">Ubicación</a>
+      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">Find Me</a>
     </ion-footer-bar>
-
   </body>
 </html>
