--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -4,11 +4,16 @@
     <title>Map</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     
-    <link href="//code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
-    <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
+    <link href="code.ionicframework.com/nightly/css/ionic.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="lib/ionic/css/ionic.css">
+    <script src="code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
 
     <!-- google maps javascript -->
-    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
+    <script src="maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
+    <script src="js/moduleangular.js"></script>
+
 
   </head>
   <body ng-controller="MapCtrl">
