--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="css/map.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="lib/ionic/css/ionic.css">
-    <script src="code.ionicframework.com/nightly/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/moduleangular.js"></script>
 
     <!-- google maps javascript -->
     <script src="maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
-    <script src="js/moduleangular.js"></script>
+    
 
 
   </head>
