--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -12,7 +12,7 @@
     <script src="lib/ionic/js/moduleangular.js"></script>
 
     <!-- google maps javascript -->
-    <script src="maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>
     
 
 
