--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -20,13 +20,15 @@
   <body ng-controller="MapCtrl">
 
     <ion-header-bar class="bar-dark" >
-      <div class="list list-inset">
+      <h1>Busca tu Sede</h1>
+    </ion-header-bar>
+
+    <div class="list list-inset">
           <label class="item item-input">
             <i class="icon ion-search placeholder-icon"></i>
             <input type="text" placeholder="Buscar">
           </label>
       </div>
-    </ion-header-bar>
 
     <ion-content>
       <div id="map" data-tap-disabled="true"></div>
