--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -20,15 +20,18 @@
   <body ng-controller="MapCtrl">
 
     <ion-header-bar class="bar-dark" >
-      <h1>Busca tu Sede</h1>
+      <h1 class="title">Busca tu Sede</h1>
     </ion-header-bar>
 
-    <div class="list list-inset">
-          <label class="item item-input">
-            <i class="icon ion-search placeholder-icon"></i>
-            <input type="text" placeholder="Buscar">
-          </label>
-      </div>
+    <div class="bar bar-header item-input-inset">
+      <label class="item-input-wrapper">
+        <i class="icon ion-ios-search placeholder-icon"></i>
+        <input type="search" placeholder="Busca tu Sede">
+      </label>
+      <button class="button button-clear">
+        Cancelar
+      </button>
+    </div>
 
     <ion-content>
       <div id="map" data-tap-disabled="true"></div>
